Changed some text, addded package origins to some functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,9 @@ Title: What the Package Does (Title Case)
 Version: 0.1
 Author: Alex Bates
 Maintainer: Alex Bates <abates@mrc-lmb.cam.ac.uk>
-Description: A selection of functions that I have created for use alongside the nat and catmaid packages.
+Description: A selection of functions that I have created for use alongside the nat and rcatmaid packages.
 License: GPL-3
 LazyData: TRUE
 RoxygenNote: 5.0.1
 Suggests: testthat
-Imports: nat, Morpho, Rvcg, catmaid, alphashape3d, nabor
+Imports: nat, Morpho, Rvcg, catmaid, alphashape3d, nabor, igraph
