--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ S3method(flow.centrality,neuron)
 S3method(flow.centrality,neuronlist)
 S3method(get.synapses,neuron)
 S3method(get.synapses,neuronlist)
-S3method(plot,split.3d)
 export(cluster.by.synapses)
 export(flow.centrality)
 export(get.synapses)
+export(plot3dsplit)
