--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,4 @@ S3method(get.synapses,neuronlist)
 export(cluster.by.synapses)
 export(flow.centrality)
 export(get.synapses)
-export(plot3dsplit)
+export(seesplit3d)
