--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: catnat
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Extra functions for use with rcatmaid and nat
 Version: 0.1
 Author: Alex Bates
 Maintainer: Alex Bates <abates@mrc-lmb.cam.ac.uk>
