Add remote for catmaid package to fix travis build

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,12 @@ Title: Extra functions for use with rcatmaid and nat
 Version: 0.1
 Author: Alex Bates
 Maintainer: Alex Bates <abates@mrc-lmb.cam.ac.uk>
-Description: A selection of functions that I have created for use alongside the nat and rcatmaid packages.
+Description: A selection of functions that I have created for use alongside the
+    nat and rcatmaid packages.
 License: GPL-3
 LazyData: TRUE
 RoxygenNote: 5.0.1
 Suggests: testthat
 Depends: nat, catmaid
 Imports: Morpho, Rvcg, alphashape3d, nabor, igraph
+Remotes: jefferis/rcatmaid
