--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,9 @@ export(neurites)
 export(neurons.inside)
 export(open_l1)
 export(pointsinsidemesh)
+export(primary.neurite)
+export(primary.neurite.neuron)
+export(primary.neurite.neuronlist)
 export(prune_distal)
 export(scan4matching)
 export(seebroken3d)
