*Updated assing_lh_neuron function to work with data in package *Added FC and dye-fill LHN data *Fixed mistakes in Chaing2FCWB

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,9 @@ export(arbours)
 export(arbours.neuron)
 export(ashape2mesh3d)
 export(assign.cable.polarity)
+export(assign_lh_neuron)
 export(assignside)
+export(average.tracts)
 export(axonal.endings)
 export(axonic.points)
 export(cable.inside.neuropils)
@@ -55,6 +57,7 @@ export(primary.neurite)
 export(primary.neurite.neuron)
 export(primary.neurite.neuronlist)
 export(prune_distal)
+export(rescue.dps)
 export(scan4matching)
 export(seebroken3d)
 export(seesplit3d)
