--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ S3method(napplyTransform,neuron)
 S3method(napplyTransform,neuronlist)
 S3method(neurites,neuron)
 S3method(neurites,neuronlist)
+S3method(resample,catmaid.neuron)
+S3method(resample,catmaid.neuronlist)
 S3method(soma,neuron)
 S3method(soma,neuronlist)
 S3method(somaid,neuron)
@@ -47,6 +49,7 @@ export(longestpathfromsoma)
 export(make.anatomical.model)
 export(mixed.points)
 export(napplyTransform)
+export(nblast_bothways)
 export(neurites)
 export(neuron.heatmap)
 export(neurons.inside)
@@ -57,6 +60,8 @@ export(primary.neurite)
 export(primary.neurite.neuron)
 export(primary.neurite.neuronlist)
 export(prune_distal)
+export(prune_with_synapses)
+export(resample.catmaid)
 export(rescue.dps)
 export(scan4matching)
 export(seebroken3d)
