* Made changes to CATMAID functions suggested by Greg * Added function for adding meta-annotations * Added function for marking partners in CATMAID using Philipp's nomenclature * Added function to retrieving marked partners from CATMAID

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,9 @@ S3method(napplyTransform,neuron)
 S3method(napplyTransform,neuronlist)
 S3method(neurites,neuron)
 S3method(neurites,neuronlist)
-S3method(resample,catmaid.neuron)
-S3method(resample,catmaid.neuronlist)
+S3method(prune,catmaidneuron)
+S3method(resample,catmaidneuron)
+S3method(resample,catmaidneuronlist)
 S3method(soma,neuron)
 S3method(soma,neuronlist)
 S3method(somaid,neuron)
@@ -32,6 +33,8 @@ export(average.tracts)
 export(axonal.endings)
 export(axonic.points)
 export(cable.inside.neuropils)
+export(catmaid_annotate_partners)
+export(catmaid_set_meta_annotations)
 export(cluster_synapses_within_skeleton)
 export(clusterbysynapses)
 export(combine.alphashape)
@@ -60,8 +63,6 @@ export(primary.neurite)
 export(primary.neurite.neuron)
 export(primary.neurite.neuronlist)
 export(prune_distal)
-export(prune_with_synapses)
-export(resample.catmaid)
 export(rescue.dps)
 export(scan4matching)
 export(seebroken3d)
@@ -81,3 +82,5 @@ export(write.spin.split.swc)
 export(write_ack)
 import(catmaid)
 import(nat)
+importFrom(nat,prune)
+importFrom(nat,resample)
