* Added simple function to update neuron names in a neuronlist * Fixed errors in annotation functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,8 @@ S3method(somaid,neuron)
 S3method(somaid,neuronlist)
 S3method(somapos,neuron)
 S3method(somapos,neuronlist)
+S3method(update,names.neuronlist)
+S3method(update,neuronlist)
 export(WriteVTKalphashape)
 export(arbour.clusters)
 export(arbours)
@@ -64,6 +66,7 @@ export(primary.neurite.neuron)
 export(primary.neurite.neuronlist)
 export(prune_distal)
 export(rescue.dps)
+export(reverse.name.side)
 export(scan4matching)
 export(seebroken3d)
 export(seesplit3d)
