some more small doc fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ export(prune_distal)
 export(rescue.dps)
 export(reverse.name.side)
 export(scan4matching)
+export(scan_lh_matches)
 export(seebroken3d)
 export(seesplit3d)
 export(skeleton_connectivity_matrix)
