--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,5 +86,19 @@ export(write.spin.split.swc)
 export(write_ack)
 import(catmaid)
 import(nat)
+importFrom(Morpho,crossProduct)
+importFrom(dplyr,filter)
+importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,rainbow)
+importFrom(graphics,legend)
+importFrom(graphics,plot)
+importFrom(graphics,plot.new)
+importFrom(nabor,knn)
 importFrom(nat,prune)
 importFrom(nat,resample)
+importFrom(nat.templatebrains,xform_brain)
+importFrom(stats,complete.cases)
+importFrom(stats,sd)
+importFrom(utils,browseURL)
+importFrom(utils,read.table)
+importFrom(utils,write.table)
