remove unnecessary rdname tags
* only need to use these when you want to merge docs for multiple functions
* and even then generally not for the main function (e.g. the generic)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ export(tracer.plot)
 export(tracer.treenodes.plot)
 export(transform3dalphashape)
 export(write.spin.split.swc)
+export(write.spin.swc)
 export(write_ack)
 import(catmaid)
 import(nat)
