tidy up resample methods
* note that it should always be possible to call these using the generic method name
  i.e. resample not resample.catmaidneuronlist
* they should also have the same argument names as the generic
* I have deprecated the original resample.catmaidneuronlist and added a resample.neuronlist method
  which I may move to nat

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(neurites,neuronlist)
 S3method(prune,catmaidneuron)
 S3method(resample,catmaidneuron)
 S3method(resample,catmaidneuronlist)
+S3method(resample,neuronlist)
 S3method(soma,neuron)
 S3method(soma,neuronlist)
 S3method(somaid,neuron)
