--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,5 +11,9 @@ RoxygenNote: 6.0.1
 Suggests: testthat, gplots, ggplot2, easyGgplot2, nat.flybrains, doMC
 Depends: nat, catmaid, igraph, alphashape3d, nat.nblast
 Imports: Rvcg, nabor, lubridate, Morpho, dplyr, nat.templatebrains, rgl, plyr
-Remotes: kassambara/easyGgplot2, jefferis/rcatmaid
+Remotes: kassambara/easyGgplot2,
+    jefferis/nat,
+    jefferis/rcatmaid,
+    jefferislab/nat.templatebrains,
+    jefferislab/nat.flybrains
 Encoding: UTF-8
