* Improved S3 generic/method consistency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,8 +22,6 @@ S3method(somaid,neuron)
 S3method(somaid,neuronlist)
 S3method(somapos,neuron)
 S3method(somapos,neuronlist)
-S3method(update,names.neuronlist)
-S3method(update,neuronlist)
 export(WriteVTKalphashape)
 export(arbour.clusters)
 export(arbours)
@@ -77,15 +75,15 @@ export(soma)
 export(somaid)
 export(somapos)
 export(splitscan)
-export(summarise_contribution)
 export(synapsecolours.neuron)
 export(tracer.neuron.stats)
 export(tracer.plot)
 export(tracer.treenodes.plot)
 export(transform3dalphashape)
+export(update_names)
+export(update_neurons)
 export(write.spin.split.swc)
 export(write.spin.swc)
-export(write_ack)
 import(catmaid)
 import(nat)
 importFrom(Morpho,crossProduct)
