* Fix outstanding documentation issues so that the checker is now happy * No more WARNINGS when package is built * 4 notes remain to be addressed at this stage

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ S3method(napplyTransform,neuron)
 S3method(napplyTransform,neuronlist)
 S3method(neurites,neuron)
 S3method(neurites,neuronlist)
+S3method(primary.neurite,neuron)
+S3method(primary.neurite,neuronlist)
 S3method(prune,catmaidneuron)
 S3method(resample,catmaidneuron)
 S3method(resample,catmaidneuronlist)
@@ -22,6 +24,8 @@ S3method(somaid,neuron)
 S3method(somaid,neuronlist)
 S3method(somapos,neuron)
 S3method(somapos,neuronlist)
+S3method(starting.neurite,neuron)
+S3method(starting.neurite,neuronlist)
 export(WriteVTKalphashape)
 export(arbour.clusters)
 export(arbours)
@@ -49,7 +53,6 @@ export(get.hxsurf)
 export(get.skeleton.from.flycircuit)
 export(get.synapses)
 export(get_connected_skeletons)
-export(longestpathfromsoma)
 export(make.anatomical.model)
 export(mixed.points)
 export(napplyTransform)
@@ -61,8 +64,6 @@ export(open_l1)
 export(overlap.connectivity.matrix)
 export(pointsinsidemesh)
 export(primary.neurite)
-export(primary.neurite.neuron)
-export(primary.neurite.neuronlist)
 export(prune_distal)
 export(rescue.dps)
 export(reverse.name.side)
@@ -75,6 +76,7 @@ export(soma)
 export(somaid)
 export(somapos)
 export(splitscan)
+export(starting.neurite)
 export(synapsecolours.neuron)
 export(tracer.neuron.stats)
 export(tracer.plot)
