--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,12 @@
 
 S3method(arbour.clusters,neuron)
 S3method(arbour.clusters,neuronlist)
+S3method(axonic.cable,neuron)
+S3method(axonic.cable,neuronlist)
 S3method(cluster_synapses_within_skeleton,neuron)
 S3method(cluster_synapses_within_skeleton,neuronlist)
+S3method(dendritic.cable,neuron)
+S3method(dendritic.cable,neuronlist)
 S3method(flow.centrality,neuron)
 S3method(flow.centrality,neuronlist)
 S3method(get.synapses,neuron)
@@ -15,9 +19,6 @@ S3method(neurites,neuronlist)
 S3method(primary.neurite,neuron)
 S3method(primary.neurite,neuronlist)
 S3method(prune,catmaidneuron)
-S3method(resample,catmaidneuron)
-S3method(resample,catmaidneuronlist)
-S3method(resample,neuronlist)
 S3method(soma,neuron)
 S3method(soma,neuronlist)
 S3method(somaid,neuron)
@@ -36,6 +37,7 @@ export(assign_lh_neuron)
 export(assignside)
 export(average.tracts)
 export(axonal.endings)
+export(axonic.cable)
 export(axonic.points)
 export(cable.inside.neuropils)
 export(catmaid_annotate_partners)
@@ -45,6 +47,7 @@ export(clusterbysynapses)
 export(combine.alphashape)
 export(connectivity_matrix)
 export(correctsoma)
+export(dendritic.cable)
 export(dendritic.endings)
 export(dendritic.points)
 export(downstream.deletion.test)
@@ -65,6 +68,9 @@ export(overlap.connectivity.matrix)
 export(pointsinsidemesh)
 export(primary.neurite)
 export(prune_distal)
+export(resample.catmaidneuron)
+export(resample.catmaidneuronlist)
+export(resample.neuronlist)
 export(rescue.dps)
 export(reverse.name.side)
 export(scan4matching)
