* Added function to prune a neuron interactively * Made method to prune vertices from catmaidneuron

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(arbour.clusters,neuron)
 S3method(arbour.clusters,neuronlist)
+S3method(arbours,neuron)
+S3method(arbours,neuronlist)
 S3method(axonic.cable,neuron)
 S3method(axonic.cable,neuronlist)
 S3method(cluster_synapses_within_skeleton,neuron)
@@ -19,6 +21,11 @@ S3method(neurites,neuronlist)
 S3method(primary.neurite,neuron)
 S3method(primary.neurite,neuronlist)
 S3method(prune,catmaidneuron)
+S3method(prune_online,neuron)
+S3method(prune_online,neuronlist)
+S3method(resample,catmaidneuron)
+S3method(resample,catmaidneuronlist)
+S3method(resample,neuronlist)
 S3method(soma,neuron)
 S3method(soma,neuronlist)
 S3method(somaid,neuron)
@@ -30,7 +37,6 @@ S3method(starting.neurite,neuronlist)
 export(WriteVTKalphashape)
 export(arbour.clusters)
 export(arbours)
-export(arbours.neuron)
 export(ashape2mesh3d)
 export(assign.cable.polarity)
 export(assign_lh_neuron)
@@ -57,6 +63,7 @@ export(get.skeleton.from.flycircuit)
 export(get.synapses)
 export(get_connected_skeletons)
 export(make.anatomical.model)
+export(make.mirror.transform)
 export(mixed.points)
 export(napplyTransform)
 export(nblast_bothways)
@@ -68,9 +75,7 @@ export(overlap.connectivity.matrix)
 export(pointsinsidemesh)
 export(primary.neurite)
 export(prune_distal)
-export(resample.catmaidneuron)
-export(resample.catmaidneuronlist)
-export(resample.neuronlist)
+export(prune_online)
 export(rescue.dps)
 export(reverse.name.side)
 export(scan4matching)
@@ -94,6 +99,7 @@ export(write.spin.split.swc)
 export(write.spin.swc)
 import(catmaid)
 import(nat)
+importFrom(Morpho,applyTransform)
 importFrom(Morpho,crossProduct)
 importFrom(dplyr,filter)
 importFrom(grDevices,colorRampPalette)
@@ -103,6 +109,7 @@ importFrom(graphics,plot)
 importFrom(graphics,plot.new)
 importFrom(nabor,knn)
 importFrom(nat,prune)
+importFrom(nat,prune_vertices)
 importFrom(nat,resample)
 importFrom(nat.templatebrains,xform_brain)
 importFrom(stats,complete.cases)
