* Function for writing randoimised synapse lists with google sheets * Functions for updating tracing data in googlesheets * Function for examining microtubules in CATMAID neurons * Function to manually assign axon and dendrite to a neuron using prune_online * Documentation for above

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,10 +14,13 @@ S3method(flow.centrality,neuron)
 S3method(flow.centrality,neuronlist)
 S3method(get.synapses,neuron)
 S3method(get.synapses,neuronlist)
+S3method(manually_assign_axon_dendrite,neuron)
+S3method(manually_assign_axon_dendrite,neuronlist)
 S3method(napplyTransform,neuron)
 S3method(napplyTransform,neuronlist)
 S3method(neurites,neuron)
 S3method(neurites,neuronlist)
+S3method(points,in.neuropil)
 S3method(primary.neurite,neuron)
 S3method(primary.neurite,neuronlist)
 S3method(prune,catmaidneuron)
@@ -53,6 +56,7 @@ export(clusterbysynapses)
 export(combine.alphashape)
 export(connectivity_matrix)
 export(correctsoma)
+export(create_tracing_googlesheet)
 export(dendritic.cable)
 export(dendritic.endings)
 export(dendritic.points)
@@ -64,6 +68,8 @@ export(get.synapses)
 export(get_connected_skeletons)
 export(make.anatomical.model)
 export(make.mirror.transform)
+export(manually_assign_axon_dendrite)
+export(mark.microtubules)
 export(mixed.points)
 export(napplyTransform)
 export(nblast_bothways)
@@ -75,6 +81,7 @@ export(overlap.connectivity.matrix)
 export(pointsinsidemesh)
 export(primary.neurite)
 export(prune_distal)
+export(prune_microtubules)
 export(prune_online)
 export(rescue.dps)
 export(reverse.name.side)
@@ -95,6 +102,9 @@ export(tracer.treenodes.plot)
 export(transform3dalphashape)
 export(update_names)
 export(update_neurons)
+export(update_tracing_googlesheet)
+export(update_tracing_worksheet)
+export(visualise.microtubules)
 export(write.spin.split.swc)
 export(write.spin.swc)
 import(catmaid)
