--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ export(scan4matching)
 export(scan_lh_matches)
 export(seebroken3d)
 export(seesplit3d)
+export(sholl_data)
 export(skeleton_connectivity_matrix)
 export(soma)
 export(somaid)
