add imports for packages in Depends
* to keep check happy

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,8 +122,11 @@ export(update_tracing_worksheet)
 export(visualise.microtubules)
 export(write.spin.split.swc)
 export(write.spin.swc)
+import(alphashape3d)
 import(catmaid)
 import(nat)
+import(nat.nblast)
+import(rgl)
 importFrom(Morpho,applyTransform)
 importFrom(Morpho,crossProduct)
 importFrom(dplyr,filter)
