doc fixes / roxygenise
* at this point there are no documentation errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ S3method(points,in.neuropil)
 S3method(primary.neurite,neuron)
 S3method(primary.neurite,neuronlist)
 S3method(prune,catmaidneuron)
+S3method(prune,in.volume)
 S3method(prune_microtubules,neuron)
 S3method(prune_microtubules,neuronlist)
 S3method(prune_online,neuron)
@@ -90,6 +91,7 @@ export(nblast_bothways)
 export(neurites)
 export(neuron.heatmap)
 export(neurons.inside)
+export(node.contribution.to.skeletons)
 export(open_l1)
 export(overlap.connectivity.matrix)
 export(pointsinsidemesh)
@@ -97,6 +99,7 @@ export(primary.neurite)
 export(prune_distal)
 export(prune_microtubules)
 export(prune_online)
+export(prune_vertices.catmaidneuron)
 export(rescue.dps)
 export(reverse.name.side)
 export(scan4matching)
@@ -137,7 +140,6 @@ importFrom(graphics,plot)
 importFrom(graphics,plot.new)
 importFrom(nabor,knn)
 importFrom(nat,prune)
-importFrom(nat,prune_vertices)
 importFrom(nat,resample)
 importFrom(nat.templatebrains,xform_brain)
 importFrom(stats,complete.cases)
