--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ License: GPL-3
 LazyData: TRUE
 RoxygenNote: 6.0.1
 Suggests: testthat, gplots, ggplot2, easyGgplot2, nat.flybrains, doMC
-Depends:  R (>= 2.10), nat, catmaid, alphashape3d, nat.nblast
+Depends:  R (>= 2.10), nat, catmaid, alphashape3d, nat.nblast, nat.flybrains
 Imports: Rvcg, nabor, lubridate, Morpho, dplyr, nat.templatebrains, rgl, plyr,
     igraph, googlesheets
 Remotes: kassambara/easyGgplot2,
