Fix more namespace issues + missing package suggestions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -132,7 +132,10 @@ import(nat.nblast)
 import(rgl)
 importFrom(Morpho,applyTransform)
 importFrom(Morpho,crossProduct)
+importFrom(dplyr,arrange_)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
+importFrom(dplyr,mutate_)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,rainbow)
 importFrom(graphics,legend)
