--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ cache: packages
 env:
   global:
     - RGL_USE_NULL=TRUE
+    - MAKEFLAGS="-j 2"
+    - CRAN: https://cran.rstudio.com
+    - _R_CHECK_FORCE_SUGGESTS_=FALSE
