--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ language: R
 sudo: false
 dist: trusty
 cache: packages
+r_build_args: "--no-manual"
+r_check_args: "--no-manual"
 env:
   global:
     - RGL_USE_NULL=TRUE
