--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,7 @@ Description: A selection of functions that created for use alongside the nat and
 License: GPL-3
 LazyData: TRUE
 RoxygenNote: 6.0.1
-Suggests: testthat, gplots, ggplot2, easyGgplot2, nat.flybrains, doMC, elmr, 
-    yaml
+Suggests: testthat, gplots, ggplot2, easyGgplot2, doMC, elmr, yaml
 Depends:  R (>= 2.10), nat, catmaid, alphashape3d, nat.nblast, nat.flybrains
 Imports: Rvcg, nabor, lubridate, Morpho, dplyr, nat.templatebrains, rgl, plyr,
     igraph, googlesheets
