--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ LazyData: TRUE
 RoxygenNote: 6.0.1
 Suggests: testthat, gplots, ggplot2, easyGgplot2, doMC, elmr, yaml
 Depends:  R (>= 2.10), nat, catmaid, alphashape3d, nat.nblast, nat.flybrains
-Imports: Rvcg, nabor, lubridate, Morpho, dplyr, nat.templatebrains, rgl, plyr,
+Imports: Rvcg, nabor, Morpho, dplyr, nat.templatebrains, rgl, plyr,
     igraph, googlesheets
 Remotes: kassambara/easyGgplot2,
     jefferis/nat,
