import nat.flybrains to keep check happy

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -128,6 +128,7 @@ export(write.spin.swc)
 import(alphashape3d)
 import(catmaid)
 import(nat)
+import(nat.flybrains)
 import(nat.nblast)
 import(rgl)
 importFrom(Morpho,applyTransform)
