--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ S3method(arbours,neuron)
 S3method(arbours,neuronlist)
 S3method(assign_strahler,neuron)
 S3method(assign_strahler,neuronlist)
-S3method(axonic.cable,neuron)
 S3method(axonic.cable,neuronlist)
 S3method(cluster_synapses_within_skeleton,neuron)
 S3method(cluster_synapses_within_skeleton,neuronlist)
@@ -28,11 +27,11 @@ S3method(napplyTransform,neuron)
 S3method(napplyTransform,neuronlist)
 S3method(neurites,neuron)
 S3method(neurites,neuronlist)
+S3method(plot3d,split)
 S3method(points,in.neuropil)
 S3method(primary.neurite,neuron)
 S3method(primary.neurite,neuronlist)
 S3method(prune,catmaidneuron)
-S3method(prune,in.volume)
 S3method(prune_microtubules,neuron)
 S3method(prune_microtubules,neuronlist)
 S3method(prune_online,neuron)
@@ -48,7 +47,10 @@ S3method(somapos,neuron)
 S3method(somapos,neuronlist)
 S3method(starting.neurite,neuron)
 S3method(starting.neurite,neuronlist)
+S3method(unsure.cable,neuron)
+S3method(unsure.cable,neuronlist)
 export(WriteVTKalphashape)
+export(arbour.cable)
 export(arbour.clusters)
 export(arbours)
 export(ashape2mesh3d)
@@ -80,6 +82,7 @@ export(get.hxsurf)
 export(get.skeleton.from.flycircuit)
 export(get.synapses)
 export(get_connected_skeletons)
+export(label.neuron.class)
 export(make.anatomical.model)
 export(make.mirror.transform)
 export(manually_assign_axon_dendrite)
@@ -97,6 +100,7 @@ export(overlap.connectivity.matrix)
 export(pointsinsidemesh)
 export(primary.neurite)
 export(prune_distal)
+export(prune_in_volume)
 export(prune_microtubules)
 export(prune_online)
 export(prune_vertices.catmaidneuron)
@@ -113,11 +117,14 @@ export(somaid)
 export(somapos)
 export(splitscan)
 export(starting.neurite)
+export(subtree)
+export(synapse.contribution.to.skeletons)
 export(synapsecolours.neuron)
 export(tracer.neuron.stats)
 export(tracer.plot)
 export(tracer.treenodes.plot)
 export(transform3dalphashape)
+export(unsure.cable)
 export(update_names)
 export(update_neurons)
 export(update_tracing_googlesheet)
