Added function to pruned neuron based on CATMAID tags

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(arbour.clusters,neuron)
 S3method(arbour.clusters,neuronlist)
 S3method(arbours,neuron)
 S3method(arbours,neuronlist)
+S3method(assign.connector.info,neuron)
+S3method(assign.connector.info,neuronlist)
 S3method(assign_strahler,neuron)
 S3method(assign_strahler,neuronlist)
 S3method(axonic.cable,neuronlist)
@@ -32,6 +34,8 @@ S3method(points,in.neuropil)
 S3method(primary.neurite,neuron)
 S3method(primary.neurite,neuronlist)
 S3method(prune,catmaidneuron)
+S3method(prune_by_tag,neuron)
+S3method(prune_by_tag,neuronlist)
 S3method(prune_microtubules,neuron)
 S3method(prune_microtubules,neuronlist)
 S3method(prune_online,neuron)
@@ -99,6 +103,7 @@ export(open_l1)
 export(overlap.connectivity.matrix)
 export(pointsinsidemesh)
 export(primary.neurite)
+export(prune_by_tag)
 export(prune_distal)
 export(prune_in_volume)
 export(prune_microtubules)
