Added prune_strahler function for the catmaidneuron class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ export(prune_distal)
 export(prune_in_volume)
 export(prune_microtubules)
 export(prune_online)
+export(prune_strahler.catmaidneuron)
 export(prune_vertices.catmaidneuron)
 export(rescue.dps)
 export(reverse.name.side)
@@ -156,6 +157,7 @@ importFrom(graphics,plot)
 importFrom(graphics,plot.new)
 importFrom(nabor,knn)
 importFrom(nat,prune)
+importFrom(nat,prune_strahler)
 importFrom(nat,resample)
 importFrom(nat.templatebrains,xform_brain)
 importFrom(stats,complete.cases)
