--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(arbour.clusters,neuron)
 S3method(arbour.clusters,neuronlist)
 S3method(arbours,neuron)
 S3method(arbours,neuronlist)
+S3method(as.mesh3d,kde)
 S3method(assign.connector.info,neuron)
 S3method(assign.connector.info,neuronlist)
 S3method(assign_strahler,neuron)
