Shift neurons in 3D space
Function to shift neurons in 3D space. No rotation of arbor.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,6 +116,7 @@ export(scan4matching)
 export(scan_lh_matches)
 export(seebroken3d)
 export(seesplit3d)
+export(shift.neurons)
 export(sholl_data)
 export(skeleton_connectivity_matrix)
 export(soma)
