Added function to assess connectivity similarity
* From Jarrell et al. 2012
* Also fixed some issues with prune functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ S3method(points,in.neuropil)
 S3method(primary.neurite,neuron)
 S3method(primary.neurite,neuronlist)
 S3method(prune,catmaidneuron)
+S3method(prune_by_tag,catmaidneuron)
 S3method(prune_by_tag,neuron)
 S3method(prune_by_tag,neuronlist)
 S3method(prune_microtubules,neuron)
@@ -75,6 +76,7 @@ export(cluster_synapses_within_skeleton)
 export(clusterbysynapses)
 export(combine.alphashape)
 export(connectivity_matrix)
+export(connectivity_similarity)
 export(correctsoma)
 export(create_tracing_googlesheet)
 export(dendritic.cable)
