--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ export(clusterbysynapses)
 export(combine.alphashape)
 export(connectivity_matrix)
 export(connectivity_similarity)
+export(connectivity_similarity_distance)
 export(correctsoma)
 export(create_tracing_googlesheet)
 export(dendritic.cable)
