--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,8 @@ S3method(prune_online,neuronlist)
 S3method(resample,catmaidneuron)
 S3method(resample,catmaidneuronlist)
 S3method(resample,neuronlist)
+S3method(select,neurons)
+S3method(select,points)
 S3method(soma,neuron)
 S3method(soma,neuronlist)
 S3method(somaid,neuron)
