Use a _ instead of a . for 'select' function names
* Fixed error with select function names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,8 +45,6 @@ S3method(prune_online,neuronlist)
 S3method(resample,catmaidneuron)
 S3method(resample,catmaidneuronlist)
 S3method(resample,neuronlist)
-S3method(select,neurons)
-S3method(select,points)
 S3method(soma,neuron)
 S3method(soma,neuronlist)
 S3method(somaid,neuron)
@@ -85,6 +83,7 @@ export(create_tracing_googlesheet)
 export(dendritic.cable)
 export(dendritic.endings)
 export(dendritic.points)
+export(deselect_neurons)
 export(distance.from.first.branchpoint)
 export(downstream.deletion.test)
 export(flow.centrality)
@@ -122,6 +121,8 @@ export(scan4matching)
 export(scan_lh_matches)
 export(seebroken3d)
 export(seesplit3d)
+export(select_neurons)
+export(select_points)
 export(shift.neurons)
 export(sholl_data)
 export(skeleton_connectivity_matrix)
