Added namespace for label_neuron.class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,6 @@ S3method(flow.centrality,neuron)
 S3method(flow.centrality,neuronlist)
 S3method(get.synapses,neuron)
 S3method(get.synapses,neuronlist)
-S3method(label,neuron.class)
 S3method(manually_assign_axon_dendrite,neuron)
 S3method(manually_assign_axon_dendrite,neuronlist)
 S3method(mark.microtubules,neuron)
@@ -91,6 +90,7 @@ export(get.hxsurf)
 export(get.skeleton.from.flycircuit)
 export(get.synapses)
 export(get_connected_skeletons)
+export(label_neuron.class)
 export(make.anatomical.model)
 export(make.mirror.transform)
 export(manually_assign_axon_dendrite)
