Fixed errant object 'labels' in namespace?

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ S3method(napplyTransform,neuronlist)
 S3method(neurites,neuron)
 S3method(neurites,neuronlist)
 S3method(plot3d,split)
+S3method(points,in.neuropil)
 S3method(primary.neurite,neuron)
 S3method(primary.neurite,neuronlist)
 S3method(prune,catmaidneuron)
@@ -105,7 +106,6 @@ export(neurons.inside)
 export(node.contribution.to.skeletons)
 export(open_l1)
 export(overlap.connectivity.matrix)
-export(points.in.neuropil)
 export(pointsinsidemesh)
 export(primary.neurite)
 export(prune_by_tag)
