--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,7 +31,6 @@ S3method(napplyTransform,neuronlist)
 S3method(neurites,neuron)
 S3method(neurites,neuronlist)
 S3method(plot3d,split)
-S3method(points,in.neuropil)
 S3method(primary.neurite,neuron)
 S3method(primary.neurite,neuronlist)
 S3method(prune,catmaidneuron)
@@ -106,6 +105,7 @@ export(neurons.inside)
 export(node.contribution.to.skeletons)
 export(open_l1)
 export(overlap.connectivity.matrix)
+export(points.in.neuropil)
 export(pointsinsidemesh)
 export(primary.neurite)
 export(prune_by_tag)
