Generate namespace for points_in_neuropil and related functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,7 +68,7 @@ export(average.tracts)
 export(axonal_endings)
 export(axonic_cable)
 export(axonic_points)
-export(cable.inside.neuropils)
+export(cable_inside_neuropils)
 export(catmaid_annotate_partners)
 export(catmaid_set_meta_annotations)
 export(cluster_synapses_within_skeleton)
@@ -105,7 +105,7 @@ export(neurons.inside)
 export(node.contribution.to.skeletons)
 export(open_l1)
 export(overlap.connectivity.matrix)
-export(points.in.neuropil)
+export(points_in_neuropil)
 export(pointsinsidemesh)
 export(primary.neurite)
 export(prune_by_tag)
