--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ export(connectivity_matrix)
 export(connectivity_similarity)
 export(connectivity_similarity_distance)
 export(correctsoma)
+export(create_skeleton)
 export(create_tracing_googlesheet)
 export(dendritic_cable)
 export(dendritic_endings)
