Add namespace for create_skeleton

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ S3method(assign.connector.info,neuronlist)
 S3method(assign_strahler,neuron)
 S3method(assign_strahler,neuronlist)
 S3method(axonic_cable,neuronlist)
+S3method(cable_inside_neuropils,neuron)
+S3method(cable_inside_neuropils,neuronlist)
 S3method(cluster_synapses_within_skeleton,neuron)
 S3method(cluster_synapses_within_skeleton,neuronlist)
 S3method(dendritic_cable,neuron)
