Correct namespace for create_skeleton_from_nrrd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,7 +80,7 @@ export(connectivity_matrix)
 export(connectivity_similarity)
 export(connectivity_similarity_distance)
 export(correctsoma)
-export(create_skeleton)
+export(create_skeleton_from_nrrd)
 export(create_tracing_googlesheet)
 export(dendritic_cable)
 export(dendritic_endings)
