Update for prune_in_volume to work with prune_vertices directly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,8 @@ S3method(prune,catmaidneuron)
 S3method(prune_by_tag,catmaidneuron)
 S3method(prune_by_tag,neuron)
 S3method(prune_by_tag,neuronlist)
+S3method(prune_in_volume,neuron)
+S3method(prune_in_volume,neuronlist)
 S3method(prune_microtubules,neuron)
 S3method(prune_microtubules,neuronlist)
 S3method(prune_online,neuron)
