Update documentation for in_neuropil

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,8 @@ S3method(flow.centrality,neuron)
 S3method(flow.centrality,neuronlist)
 S3method(get.synapses,neuron)
 S3method(get.synapses,neuronlist)
+S3method(in_neuropil,neuron)
+S3method(in_neuropil,neuronlist)
 S3method(manually_assign_axon_dendrite,neuron)
 S3method(manually_assign_axon_dendrite,neuronlist)
 S3method(mark.microtubules,neuron)
@@ -95,6 +97,7 @@ export(get.hxsurf)
 export(get.skeleton.from.flycircuit)
 export(get.synapses)
 export(get_connected_skeletons)
+export(in_neuropil)
 export(label_neuron.class)
 export(make.anatomical.model)
 export(make.mirror.transform)
