Updated documentation for inside_neuropils

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,6 @@ S3method(assign.connector.info,neuronlist)
 S3method(assign_strahler,neuron)
 S3method(assign_strahler,neuronlist)
 S3method(axonic_cable,neuronlist)
-S3method(cable_inside_neuropils,neuron)
-S3method(cable_inside_neuropils,neuronlist)
 S3method(cluster_synapses_within_skeleton,neuron)
 S3method(cluster_synapses_within_skeleton,neuronlist)
 S3method(dendritic_cable,neuron)
@@ -26,6 +24,8 @@ S3method(get.synapses,neuron)
 S3method(get.synapses,neuronlist)
 S3method(in_neuropil,neuron)
 S3method(in_neuropil,neuronlist)
+S3method(inside_neuropils,neuron)
+S3method(inside_neuropils,neuronlist)
 S3method(manually_assign_axon_dendrite,neuron)
 S3method(manually_assign_axon_dendrite,neuronlist)
 S3method(mark.microtubules,neuron)
@@ -74,7 +74,6 @@ export(average.tracts)
 export(axonal_endings)
 export(axonic_cable)
 export(axonic_points)
-export(cable_inside_neuropils)
 export(catmaid_annotate_partners)
 export(catmaid_set_meta_annotations)
 export(cluster_synapses_within_skeleton)
@@ -98,6 +97,7 @@ export(get.skeleton.from.flycircuit)
 export(get.synapses)
 export(get_connected_skeletons)
 export(in_neuropil)
+export(inside_neuropils)
 export(label_neuron.class)
 export(make.anatomical.model)
 export(make.mirror.transform)
