Further fixes to tracing sheet functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(arbour.clusters,neuron)
 S3method(arbour.clusters,neuronlist)
+S3method(arbour_cable,catmaidneuron)
 S3method(arbour_cable,neuron)
 S3method(arbour_cable,neuronlist)
 S3method(arbours,neuron)
@@ -11,9 +12,11 @@ S3method(assign.connector.info,neuron)
 S3method(assign.connector.info,neuronlist)
 S3method(assign_strahler,neuron)
 S3method(assign_strahler,neuronlist)
+S3method(axonic_cable,catmaidneuron)
 S3method(axonic_cable,neuronlist)
 S3method(cluster_synapses_within_skeleton,neuron)
 S3method(cluster_synapses_within_skeleton,neuronlist)
+S3method(dendritic_cable,catmaidneuron)
 S3method(dendritic_cable,neuron)
 S3method(dendritic_cable,neuronlist)
 S3method(distance.from.first.branchpoint,neuron)
@@ -58,6 +61,7 @@ S3method(somapos,neuron)
 S3method(somapos,neuronlist)
 S3method(starting.neurite,neuron)
 S3method(starting.neurite,neuronlist)
+S3method(unsure_cable,catmaidneuron)
 S3method(unsure_cable,neuron)
 S3method(unsure_cable,neuronlist)
 export(WriteVTKalphashape)
