documentation for neuronvolume functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,12 +80,15 @@ export(axonic_cable)
 export(axonic_points)
 export(catmaid_annotate_partners)
 export(catmaid_set_meta_annotations)
+export(catmaid_upload_neurons)
 export(cluster_synapses_within_skeleton)
 export(clusterbysynapses)
 export(combine.alphashape)
 export(connectivity_matrix)
 export(connectivity_similarity)
 export(connectivity_similarity_distance)
+export(connectivity_similarity_matrix)
+export(connector_URL)
 export(correctsoma)
 export(create_skeleton_from_nrrd)
 export(create_tracing_samplesheet)
@@ -95,6 +98,14 @@ export(dendritic_points)
 export(deselect_neurons)
 export(distance.from.first.branchpoint)
 export(downstream.deletion.test)
+export(fafb_frags_ids)
+export(fafb_frags_skeletons)
+export(fafb_neuron_details)
+export(fafb_seg)
+export(fafb_seg_hitlist)
+export(fafb_seg_tracing_list)
+export(fafb_segs_stitch_volumes)
+export(fafbseg_get_node_count)
 export(flow.centrality)
 export(get.hxsurf)
 export(get.skeleton.from.flycircuit)
@@ -106,6 +117,7 @@ export(label_neuron.class)
 export(make.anatomical.model)
 export(make.mirror.transform)
 export(manually_assign_axon_dendrite)
+export(map_fafbsegs_to_neuron)
 export(mark.microtubules)
 export(microtubules.errors)
 export(mixed_points)
@@ -114,6 +126,7 @@ export(nblast_bothways)
 export(neurites)
 export(neuron.heatmap)
 export(neurons.inside)
+export(neuronvolume3d)
 export(node.contribution.to.skeletons)
 export(open_l1)
 export(overlap.connectivity.matrix)
@@ -127,6 +140,7 @@ export(prune_microtubules)
 export(prune_online)
 export(prune_strahler.catmaidneuron)
 export(prune_vertices.catmaidneuron)
+export(read.neurons.fafbseg)
 export(rescue.dps)
 export(reverse.name.side)
 export(scan4matching)
@@ -135,6 +149,7 @@ export(seebroken3d)
 export(seesplit3d)
 export(select_neurons)
 export(select_points)
+export(set_segmentation_location)
 export(shift.neurons)
 export(sholl_data)
 export(skeleton_connectivity_matrix)
